fixing block one mobile image resolution on mobile 2

--- a/src/components/BlockOne/BlockOne.css
+++ b/src/components/BlockOne/BlockOne.css
@@ -379,6 +379,6 @@
   }
 
   .blockone-imgtwo {
-    height: 560px;
+    height: 98%;
   }
 }
